# ground_based_autonomy_basic

./: README.md
src/keyboard_teleop/: CMakeLists.txt  README.md  package.xml
src/keyboard_teleop/launch/: keyboard_teleop.launch
src/keyboard_teleop/src/: keyboard_teleop.py
src/local_planner/launch/: local_planner.launch
src/turtlebot3_bridge/: CMakeLists.txt  package.xml
src/turtlebot3_bridge/launch/: ground_autonomy.launch  turtlebot3_bridge.launch
src/turtlebot3_bridge/src/: turtlebot3_bridge.cpp
src/vehicle_simulator/launch/: system.launch  vehicle_simulator.launch
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/waypoint_from_move_base_simple_goal/: CMakeLists.txt  README.md  package.xml
src/waypoint_from_move_base_simple_goal/data/: boundary_turtlebot3World.ply  waypoints_turtlebot3World.ply
src/waypoint_from_move_base_simple_goal/launch/: waypoint_from_MoveBaseSimpleGoal.launch
src/waypoint_from_move_base_simple_goal/src/: waypoint_from_MoveBaseSimpleGoal_Node.cpp
